--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,10 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = Ai-02  
-pool1 = sg.vipor.net:5040
+rigName = X  
+pool1 = cn.vipor.net:5040
 useSSL = true  
 algorithm = verushash
-cpuThreads = 1 
+cpuThreads = 3
 silence = 3 
 logPath = /dev/null 
 logLevel = 0 
-cpuMaxThreads = 1
