--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
 rigName = B 
-pool1 = sg.vipor.net:5140
+pool1 = cn.vipor.net:5140
 useSSL = true  
 algorithm = verushash
 cpuThreads = 3
