--- a/us.ini
+++ b/us.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = A
-pool1 = sg.vipor.net:5140
+rigName = E
+pool1 = us.vipor.net:5140
 useSSL = true  
 cpuThreads = 2
 algorithm = verushash
