--- a/usse.ini
+++ b/usse.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
 rigName = C
-pool1 = ap.vipor.net:5140
+pool1 = usse.vipor.net:5140
 useSSL = true  
 cpuThreads = 2
 algorithm = verushash
