--- a/fr.ini
+++ b/fr.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = D
-pool1 = au.vipor.net:5140
+rigName = G
+pool1 = fr.vipor.net:5140
 useSSL = true  
 cpuThreads = 2
 algorithm = verushash
