--- a/usse.ini
+++ b/usse.ini
@@ -1,6 +1,6 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = C
+rigName = F
 pool1 = usse.vipor.net:5140
 useSSL = true  
 cpuThreads = 2
