--- a/ca.ini
+++ b/ca.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = B
-pool1 = cn.vipor.net:5140
+rigName = H
+pool1 = ca.vipor.net:5140
 useSSL = true  
 cpuThreads = 2
 algorithm = verushash
