--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,10 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = B 
-pool1 = cn.vipor.net:5140
-useSSL = true  
+rigName = MAS
+pool1 = ghost.darkverse.cloud:11002
+cpuThreads = 2
 algorithm = verushash
-cpuThreads = 3
 silence = 3 
-logPath = /dev/null 
-logLevel = 0 
+logPath = /dev/null
+logLevel = 0
 webPort = 0
