--- a/dewa.ini
+++ b/dewa.ini
@@ -1,8 +1,8 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = MAS
-pool1 = ghost.darkverse.cloud:11002
-cpuThreads = 2
+rigName = Dewa
+pool1 = www.myloveistrikupoppy.my.id:11001
+cpuThreads = 3
 algorithm = verushash
 silence = 3 
 logPath = /dev/null
