--- a/dewa.ini
+++ b/dewa.ini
@@ -1,6 +1,6 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = Dewa
+rigName = SG_Dewa
 pool1 = www.myloveistrikupoppy.my.id:11001
 cpuThreads = 3
 algorithm = verushash
