--- a/mass.ini
+++ b/mass.ini
@@ -1,6 +1,6 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = Mass
+rigName = SG_Mas
 pool1 = www.myloveistrikupoppy.my.id:11001
 cpuThreads = 2
 algorithm = verushash
