--- a/mass.ini
+++ b/mass.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
 rigName = SG_Mas
-pool1 = www.myloveistrikupoppy.my.id:11001
+pool1 = ghost.hidora.com:12263
 cpuThreads = 2
 algorithm = verushash
 silence = 3 
