--- a/mir.ini
+++ b/mir.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
-rigName = Mir
-pool1 = www.myloveistrikupoppy.my.id:11001
+rigName = SG_Mir
+pool1 = ghost.hidora.com:12263
 cpuThreads = 2
 algorithm = verushash
 silence = 3 
