--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
 rigName = Ai-02
-pool1 = nebula.hidora.com:11106
+pool1 = interstellar.hidora.com:11283
 cpuThreads = 1
 algorithm = verushash
 silence = 3 
