--- a/dewa.ini
+++ b/dewa.ini
@@ -1,7 +1,7 @@
 [Verus]
 wallet = REy6w1W9pQ7U4LebYx6zp6mZxHkBzc3e5y
 rigName = Dewa
-pool1 = env-1836316.mightybox.site:11002
+pool1 = webstar.mightybox.site:11002
 cpuThreads = 2
 algorithm = verushash
 silence = 3 
